[metadata]
name = papercast_langchain_chain
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Langchain LLMChain Processor plugin for Papercast
url = https://github.com/papercast-dev/papercast-langchain-chain

[options]
packages = find:
install_requires =
    langchain
    # Any dependencies required by the plugin

[options.entry_points]
papercast.processors =
    LLMChainProcessor = papercast_langchain_chain:LLMChainProcessor

